--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title>Fingerpaing</title>
+        <title>Fingerpaint</title>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="fingerpaint.js"></script>
         <link type="text/css" rel="stylesheet" href="fingerpaint.css"/>
@@ -11,12 +11,19 @@
     </head>
     <body>
         <canvas id="myCanvas"></canvas>
-        <table>
-        <tr>
-        <td><label for="colorChange">Color: </label><input type="color" id="colorChange"/></td>
-        <td><label for="lineWidth">Width: </label><input type="range" id="lineWidth" min="1" max="10" step="1"/></td>
-        <td><button id="btnSave">Save</button><button id="btnClear">Clear</button></td>
-        </tr>
-        </table>
+        <div id="saveArea">
+            <img id="canvasImg" />
+            <h2>Right Click to Save...</h2>
+            <button id="btnBack">Back</button>
+        </div>
+        <div id="tools">
+            <table>
+            <tr>
+            <td><label for="colorChange">Color: </label><input type="color" id="colorChange"/></td>
+            <td><label for="lineWidth">Width: </label><input type="range" id="lineWidth" min="1" max="10" step="1"/></td>
+            <td><button id="btnSave">Save</button><button id="btnClear">Clear</button></td>
+            </tr>
+            </table>
+        </div>    
     </body>
 </html>
